# sports-robot

./: .gitignore  .gitmodules  LICENSE  README.md  glm5.1-use.md  pyproject.toml
.claude-plugin/: marketplace.json
docs/: marketplace-writing-guide.md  recipe-guide.md  skill-writing-guide.md
docs/todo/: note.md  (+6 more)
skill-spec/: 00-preface.md  01-why-skills-fail.md  02-skill-lifecycle.md  03-skill-md-structure.md  04-skill-directory-engineering.md  05-triggering-and-retrieval.md  06-io-contracts.md  07-reliable-instructions.md  08-failure-compensation-rollback.md  09-skill-plus-mcp.md  10-skill-plus-hooks.md  11-skill-plus-plugin.md  12-testing-evals-regression.md  13-four-complete-skills.md  14-industry-case-cards.md  15-enterprise-skill-system.md  16-self-evolving-skills-and-pitfalls.md  README.md  SUMMARY.md  appendix-a-templates.md  appendix-b-eval-assets.md  appendix-c-research-routes.md  writing-checklist.md
tennis-robot/: README.md  pyproject.toml
tennis-robot-v2/: README.md  pyproject.toml  training_log.txt
tennis-robot-v2/assets/mujoco/tennis_world/: tennis_world_mecanum.xml
tennis-robot-v2/assets/mujoco/tennis_world/assets/: actuator.xml  assets.xml  robot.xml  scene.xml
tennis-robot-v2/assets/mujoco/tennis_world/summit_xl_description/: summit_xls.xml
tennis-robot-v2/assets/mujoco/tennis_world/summit_xl_description/assets/: assets.xml  basic_scene.xml  sports mate 1.0.xml  summit_xls.urdf.xml  summit_xls_actuator.xml
tennis-robot-v2/configs/: env.yaml  train_sac.yaml
tennis-robot-v2/docs/: code-level-verification-report.md  development-log.md  dynamic-tennis-v2-baseline-metrics.json  tennis-robot-v2-baseline-metrics.json  tennis-robot-v2-metrics.json
tennis-robot-v2/scripts/: collect_dynamic_tennis_baseline.py  collect_dynamic_tennis_v2_baseline.py  evaluate.py  evaluate_real_mode.py  smoke_test.py  test_real_mode.py  train.py  train_and_eval.py  train_extended.py
tennis-robot-v2/tennis-robot-v2/docs/: dynamic-tennis-baseline-metrics.json
tennis-robot-v2/tennis_robot_v2/envs/: registration.py  summit_catcher_env.py  tennis_navigation_v2_env.py
tennis-robot-v2/tennis_robot_v2/perception/: real_mode_perception.py  sim_camera_params.py
tennis-robot-v2/tests/: test_real_mode_perception.py  test_tennis_robot_v2.py
tennis-robot/assets/mujoco/tennis_world/: tennis_world.xml
tennis-robot/assets/mujoco/tennis_world/assets/: actuator.xml  robot.xml  scene.xml
tennis-robot/configs/: env.yaml  train_sac.yaml
tennis-robot/docs/: bootstrap-run-1.md  development-log.md  dynamic-tennis-baseline-metrics.json  dynamic-tennis-baseline.md  tennis-robot-baseline-metrics.json
tennis-robot/evaluation_results/smoke_test/: report.json
tennis-robot/runs/smoke_test/SAC_smoke_test_1/: events.out.tfevents.1780993305.TaoXu.8920.0
tennis-robot/scripts/: evaluate.py  smoke_test.py  train.py
tennis-robot/tennis_robot/control/: __init__.py  mecanum_controller.py
tennis-robot/tennis_robot/envs/: __init__.py  registration.py  tennis_navigation_env.py
tennis-robot/tennis_robot/evaluation/: __init__.py  evaluate.py
tennis-robot/tennis_robot/perception/: __init__.py  vision.py
tennis-robot/tennis_robot/runs/smoke_test/SAC_smoke_test_1/: events.out.tfevents.1780993214.TaoXu.19404.0
tennis-robot/tennis_robot/training/: __init__.py  train.py
tennis-robot/tennis_robot/visualization/: __init__.py  visualizer.py
tennis-robot/tennis_robot/visualization/web/: __init__.py  server.py
tennis-robot/tests/: test_tennis_robot.py
tennis-robot/web_viz_data/: episode_1.json  episode_2.json
(+384 files in other folders)
