[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tennis-robot"
version = "0.1.0"
description = "Tennis robot simulation, training, and evaluation powered by sports-robot skills"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.2.0",
    "mujoco>=3.4.0",
    "stable-baselines3>=2.7.0",
    "torch>=2.3.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "matplotlib>=3.8.0",
    "tensorboard>=2.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
